# mbti-relationship-analysis

./: .gitignore  README.md  mbti.config.example.json  pyproject.toml
docs/: README.md
docs/design/: product-spec.md
scripts/: run_analysis.py
src/: __init__.py  __main__.py  analysis_pipeline.py  api.py  cli.py
src/analyzers/: __init__.py  report_generator.py  report_schema.py  signal_extractor.py  signal_schema.py
src/compat/: __init__.py  pydantic.py
src/models/: __init__.py  byok_client.py  llm_result.py  prompt_packager.py
src/parsers/: __init__.py  markdown_parser.py  normalizer.py  parser_factory.py  schema.py  text_parser.py
src/utils/: __init__.py  config.py  logger.py
tests/: test_analysis_pipeline.py  test_analysis_pipeline_byok.py  test_api.py  test_cli_entrypoint.py
tests/fixtures/: distant_cold_chat.txt  flirty_positive_chat.md  sample_chat.md  sample_chat.txt
tests/test_analyzers/: test_report_generator.py  test_signal_extractor.py  test_signal_extractor_fixtures.py
tests/test_models/: test_byok_client.py  test_llm_result.py  test_prompt_packager.py
tests/test_parsers/: test_markdown_parser.py  test_normalizer.py  test_parser_factory.py  test_parser_fixtures.py  test_text_parser.py
web/: .gitignore  package-lock.json  package.json
web/app/: globals.css  layout.jsx  page.jsx
