[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbti-relationship-analysis"
version = "0.1.0"
description = "MBTI Relationship Analysis MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1.10,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "black>=24.0,<25.0",
    "ruff>=0.4,<0.6",
]

[project.scripts]
mbti-analyze = "src.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0,<10.0",
    "black>=24.0,<25.0",
    "ruff>=0.4,<0.6",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
